# dev-upper-robot

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PSP.ioc  STM32F103XX_FLASH.ld  TODO.md  TODOS.md
.claude/: settings.json
.claude/agents/: freertos-safety-reviewer.md
.claude/hooks/: block-generated-edits.sh  post-build-size.sh
.claude/rules/: debugging.md  project-structure.md  safety.md  toolchain.md  worktree.md
.claude/skills/build-flash/: SKILL.md  build_flash.sh
.claude/skills/cubemx-regen/: SKILL.md  cubemx_regen.sh
.claude/skills/ml-workflow/: SKILL.md
Core/Inc/: FreeRTOSConfig.h  iwdg.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Core/Inc/app/: actuators.h  config.h  features.h  fsm.h  ipc.h  pid.h  rtt_log.h  sd_logger.h  sensors_i2c.h  sk6812.h  trigger.h  trigger_timer.h
Core/Src/: adc.c  dma.c  freertos.c  gpio.c  i2c.c  iwdg.c  main.c  sdio.c  spi.c  stm32f1xx_it.c  tim.c  usart.c
Core/Src/app/: actuators.c  features.c  fsm.c  model_rf.c  pid.c  rtt_log.c  sd_logger.c  sensors_i2c.c  sk6812.c  state_table.c  t_logger.c  t_ml.c  t_pid.c  t_state.c  t_wdg.c  trigger.c  (+3 more)
cmake/stm32cubemx/: CMakeLists.txt
docs/: feature-proposals.md
scripts/: gdb_inspect.gdb  gdb_inspect.sh
tests/: .gitignore  CMakeLists.txt  Makefile  run_all.c  test_features.c  test_fsm.c  test_pid.c  test_state_table.c  test_trigger.c  test_trigger_ml.c
tests/stubs/: FreeRTOS.h  queue.h  semphr.h  stm32f1xx_hal.h  task.h
tools/ml/: auto_label.py  requirements.txt  rtt_capture.py  train.py  validate.py  visualize.py  workflow.py
(+17 files in other folders)
